fix print version button on mobile

--- a/style.scss
+++ b/style.scss
@@ -175,6 +175,12 @@ figcaption{
     letter-spacing: 1px;
 	@include mainTextColorWithOpacity(1);
   }
+  #print-version {
+	font-size: 0.9rem;
+	bottom: 0;
+	text-align: center;	
+	border-top: 2px solid $nav_border_right_color;
+  }
   #sidebar-expand {
     display: block;
     width: 100%;
@@ -311,7 +317,7 @@ footer {
     height: 100%;
     z-index: 1001; /* need to get on top of leaflet */
     position: fixed;
-    left: 30px;
+    left: 15px;
     top: 0;
     bottom: 0;
     overflow-y: auto;
